# NoPasaNadaPE-Client

./: .gitignore  client_api.py  erase.py  main.py  pyproject.toml  sunarp_manual.py  test.py  uv_constraints.txt
documentacion/: NoPasaNadaPE - Documento de Integración API v1.md  NoPasaNadaPE_API_Guia_v1.md
src/comms/: craft_alerts.py  send_code_message.py  send_messages.py
src/monitor/: auto_scraper.py  cron.py  cronograma.py  monitor.py  settings.py  update_kpis.py  update_scraper_status.py
src/scrapers/: scrape_brevete.py  scrape_jneafil.py  scrape_jnemulta.py  scrape_osiptel.py  scrape_recvehic.py  scrape_revtec.py  scrape_satimp.py  scrape_satmul.py  scrape_soat.py  scrape_sunarp.py  scrape_sunat.py  scrape_sutran.py
src/test/: temp_email.py  test_data.py  tests.py
src/updates/: Untitled-1.py  gather_all.py  gather_brevetes.py  gather_jneafils.py  gather_jnemultas.py  gather_osipteles.py  gather_recvehic.py  gather_revtecs.py  gather_satimps.py  gather_satmuls.py  gather_soats.py  gather_sunarps.py  gather_sunats.py  gather_sutrans.py  gather_unite.py
src/utils/: client_api.py  constants.py  maintenance.py  utils.py  webdriver.py
static/: The Society of Automotive Engineers.txt  dashboard.js  npn.bat  pshell.bat  pshell_client.ps1  pshell_server.ps1  putty_open.ps1
templates/: dashboard.html
