[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "blinker==1.4",
    "flask<3.0",
    "func-timeout>=4.3.5",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-billing>=1.17.0",
    "google-cloud-monitoring>=2.28.0",
    "google-cloud-vision>=3.10.2",
    "img2pdf>=0.6.1",
    "jinja2>=3.1.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "selenium>=4.34.2",
    "selenium-wire>=5.1.0",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]
